--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,18 +1,114 @@
+@font-face {
+    font-family: 'GyeonggiBatang';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/GyeonggiBatang.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body::-webkit-scrollbar {
+    width: 10px;  /* 스크롤바의 너비 */
+}
+
+body::-webkit-scrollbar-thumb {
+    height: 0%; /* 스크롤바의 길이 */
+    background: #9cddc7; /* 스크롤바의 색상 */
+    
+    border-radius: 10px;
+}
+
+body::-webkit-scrollbar-track {
+    background: rgba(33, 244, 209, 0.1);  /*스크롤바 뒷 배경 색상*/
+}
+
 /* home */
-
-.main-wrap {
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+#main-img {
+    margin: 0px;
+    display: block;
+    padding: 100px 0px 0px;
+    background: url("../img/nature.png") 50% 50% / cover no-repeat fixed transparent;
+    height: 63rem;
+    border: none;
+    border-radius: 0px;
 }
 
-.main-size {
-    padding-left: 20px;
-    padding-right: 20px;
+.main-title {
+    font-family: 'GyeonggiBatang';
+    font-weight: 400;
+    font-size: 4rem;
+    margin: 230px 0px 0px 260px;
+    color: #000000;
+    position: relative;
+    animation: fadeInLeft 2.5s;
 }
 
-.main-video {
-    max-width: 1170px;
+.title-line {
+    margin: 0 0 23px 0;
+}
+
+@keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+        transform: translate3d(-100%, 0, 0);
+    }
+    to {
+        opacity: 1;
+        transform: translateZ(0);
+    }
+}
+
+.main-container-1 {
+    text-align: center;
+    margin: 40px 40px 40px 40px;
+    padding: 55px 0 80px 0px;
+    background-color: #f1f1f1;
+}
+
+.main-container-2 {
+    text-align: center;
+    margin: 90px 40px 90px 40px;
+    padding: 55px 0 140px 0px;
+}
+
+.home-title-1 {
+    font-size: 3rem;
+    font-weight: 600;
+    margin: 30px 0 33px 0px
+}
+
+.home-content-1 {
+    font-size: 20px;
+    font-weight: 300;
+    margin: 0 0 38px 0;
+}
+
+.home-img-1 {
+    height: 370px;
+    margin: 15px;
+}
+
+.home-img-2 {
+    height: 150px;
+}
+
+.home-card-container {
+    display: flex;
+    justify-content: center;
+    margin: 0px 0 80px 0px;
+}
+
+.home-card {
+    margin: 40px 50px 40px 50px;
+}
+
+.home-card-title {
+    font-size: 26px;
+    font-weight: 600;
+    padding: 28px 0 16px 0;
+}
+
+.home-card-content {
+    font-size: 21px;
+    font-weight: 300;
 }
 
 /* trash */
@@ -20,3 +116,4 @@
 .msg-card {
     color: blue;
 }
+
