--- a/pages/styles.css
+++ b/pages/styles.css
@@ -159,7 +159,176 @@ body::-webkit-scrollbar-track {
 
 /* trash */
 
-.msg-card {
-    color: blue;
+.search {
+    position: relative;
+    width: 300px;
+    margin: 0 0 0 340px;
+}
+  
+.search-input {
+    width: 100%;
+    border: 1px solid #bbb;
+    border-radius: 8px;
+    padding: 10px 12px;
+    font-size: 14px;
+}
+  
+#search-img {
+    background: url(https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png) 50% 50% / cover no-repeat fixed green;;
+    /* background-repeat: no-repeat; */
+    border: 0;
+    position : absolute;
+    width: 17px;
+    top: 10px;
+    right: 12px;
+    margin: 0;
 }
 
+.msg-card {
+    font-size: 20px
+}
+
+.minutes-wrap {
+    margin-top: 3.5rem;
+  }
+  
+  .detail-container {
+    flex-grow: 1;
+    display: flex; /* 추가: 가로 크기 조절을 위해 flex 설정 */
+    flex-direction: column; /* 추가: 세로 크기 조절을 위해 column 설정 */
+    padding: 12px 22px 0 22px;
+  }
+  
+  .detail {
+    flex-grow: 1; /* 추가: 가로 크기 조절을 위해 flex-grow 설정 */
+    width: 100%;
+    height: 100%;
+    min-height: 0; /* 추가: 세로 크기 조절을 위해 min-height 설정 */
+    padding: 10px;
+    border: 1px solid #880e4f;
+    border-radius: 4px;
+    font-size: 16px;
+    resize: vertical;
+    box-sizing: border-box;
+  }
+  
+  .footer {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 1.5rem;
+  }
+  
+  *, ::after, ::before {
+    box-sizing: border-box;
+    border-width: 0;
+    border-style: solid;
+    border-color: #e2e8f0;
+  }
+  
+  .responsive-wrapper .minutes-detail {
+    box-shadow: 0 0 0 1px rgba(0,0,0,.05);
+    position: relative;
+    overflow: hidden;
+    flex-direction: column;
+    border-radius: 0.5rem;
+    background-color: #ffffff;
+    min-height: 400px;
+  }
+  
+  .responsive-wrapper .minutes-detail .detail-header {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    height: 2.5rem;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    border-bottom-width: 1px;
+    --border-opacity: 1;
+    border-color: #edf2f7;
+    border-color: rgba(237,242,247,var(--border-opacity));
+    --bg-opacity: 1;
+    background-color: #fff;
+    background-color: rgba(255,255,255,var(--bg-opacity));
+  }
+  
+  .responsive-wrapper .minutes-detail .detail-header .circle-btn {
+    align-items: center;
+    display: flex;
+  }
+  
+  .responsive-wrapper .minutes-detail .detail-header .circle-btn .red-c {
+    width: 0.75rem;
+    height: 0.75rem;
+    border-radius: 9999px;
+    --bg-opacity: 1;
+    background-color: #f56565;
+    background-color: rgba(245,101,101,var(--bg-opacity));
+  }
+  
+  .responsive-wrapper .minutes-detail .detail-header .circle-btn .yellow-c {
+    --space-x-reverse: 0;
+    margin-right: calc(0.5rem * var(--space-x-reverse));
+    margin-left: calc(0.5rem * calc(1 - var(--space-x-reverse)));
+    width: 0.75rem;
+    height: 0.75rem;
+    border-radius: 9999px;
+    --bg-opacity: 1;
+    background-color: #f6e05e;
+    background-color: rgba(246,224,94,var(--bg-opacity));
+  }
+  
+  .responsive-wrapper .minutes-detail .detail-header .circle-btn .green-c {
+    --space-x-reverse: 0;
+    margin-right: calc(0.5rem * var(--space-x-reverse));
+    margin-left: calc(0.5rem * calc(1 - var(--space-x-reverse)));
+    width: 0.75rem;
+    height: 0.75rem;
+    border-radius: 9999px;
+    --bg-opacity: 1;
+    background-color: #48bb78;
+    background-color: rgba(72,187,120,var(--bg-opacity));
+  }
+  
+  .minutes-detail .detail-header {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    display: flex;
+    border-bottom-width: 1px;
+    --border-opacity: 1;
+    border-color: #edf2f7;
+    border-color: rgba(237,242,247,var(--border-opacity));
+    --bg-opacity: 1;
+    background-color: #fff;
+    background-color: rgba(255,255,255,var(--bg-opacity));
+  }
+  
+  .detail-title {
+    margin: 10px 1.5rem 10px 1.5rem;
+    border-bottom: 1px solid rgb(197, 197, 197);
+  }
+  
+  .detail-title-txt {
+    font-family: 'Pretendard' !important;
+    font-weight: 600;
+    font-size: 24px;
+    margin: 0;
+  }
+  
+  .detail-container .detail-content .detail-text {
+    padding: 1.5rem;
+    /* min-height: 100vh; */
+    width: 100%;
+    height: 600px;
+    font-size: 20px;
+    display: block;
+    overflow-x: auto;
+    color: #333;
+    background: #f8f8f8;
+    font-family: 'Pretendard';
+    margin: 0;
+  }
+  
+  .detail-container .detail-content:focus {
+    outline: none;
+  }
+  
